# cmake-practice

./: .gitattributes  CMakeLists.txt  cmake_configure_generate_sln.bat
lib/: project1.lib
src/: hello.cpp
